# countof_ns

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  README.ru.md  examples-build.bat  examples-build.sh
.github/workflows/: cmake-multi-platform.yml
docs/: 2habr.sh  Long-awaited_Countof.ru.md  comparison_table.md  comparison_table.ru.md  countof_c.c  countof_ns.h.ru.md  sizeof_evaluate.h  warning_c.c
examples/: CMakeLists.txt  LCC_MCST_Elbrus_e2k-build.sh  countof_ns_builtin_options.cmake  countof_ns_kr_options.cmake  godbolt_c.c  godbolt_cxx.cpp  long_example.h  short_example.h
examples/cmake_fetch_content/: CMakeLists.txt  CMakePresets.json  README.md  shortest-build.bat  shortest-build.sh  shortest.c
examples/junit-logs/: Clang-21-verbose-cmp.xml  Clang-default.xml  Clang-verbose-cmp.xml  GNU-cmp.xml  GNU-debug.xml  Intel-cmp.xml  Intel-debug.xml  Intel-default.xml  Intel-verbose-cmp.xml  IntelLLVM-debug.xml  IntelLLVM-verbose-cmp.xml  IntelLLVM-verbose.xml  MSCV-cmp.xml  MSCV-verbose.xml  MSVC-default.xml  NVHPC-cmp.xml  NVHPC-verbose-cmp.xml  SunPro-verbose-cmp.xml
examples/linux-kernel/: Makefile  proposal_linux_array_size.h  test_array_size.c
include/: _countof_ns_must_compatible_msvc.h  _countof_ns_must_compatible_xl.h  _countof_ns_ptr_compatible_type_msvc.h  _countof_ns_ptr_compatible_type_xl.h  countof_ns.h  proposal_linux_array_size.h
include/_comparisons/: JZMG_ARRAY_LEN.h  N3369_NITEMS.h  lnx_array_size.h  ms_countof.h  std_size.h
include/countof_ns/: _countof_ns_must_compatible_msvc.h  _countof_ns_must_compatible_xl.h  countof_ns.h
include/countof_ns/_comparisons/: JZMG_ARRAY_LEN.h
tests/: CMakeLists.txt
tests/autoconf/: autoconf.cmake  error_on_generic.c  error_on_pointer_subtraction.c  error_on_sizeof_pointer_subtraction.c  error_on_struct_bit_field.c  error_on_struct_static_assert.c  have___stdc_no_vla__.c  have___typeof_unqual__.c  have_array_extent_cxx.cpp  have_broken___typeof__.c  have_broken_elvis.c  have_broken_vla.c  have_builtin_constant_p_cxx.cpp  have_builtin_types_compatible_p.c  have_constexpr_statement_expression.c  have_countof_cxx.cpp  have_countof_vla.c  have_elvis.c  have_generic_c2y.c  have_hidden_builtin_constant_p_cxx.cpp  have_hidden_builtin_types_compatible_p.c  have_hidden_is_array_cxx.cpp  have_hidden_is_same.c  have_hidden_is_same_as_cxx.cpp  have_hidden_is_same_cxx.cpp  have_hiden_builtin_types_compatible_p.c  have_is_array_cxx.cpp  have_is_same.c  have_is_same_as_cxx.cpp  have_is_same_cxx.cpp  have_strange_builtin_constant_p_cxx.cpp  have_vla.c  have_vla.h  have_vla0.c  have_vla0.h  have_vla0_cxx.cpp  have_vla_cxx.cpp  have_vla_std_size_cxx.cpp  have_vla_zla.c  have_zla.c  (+12 more)
tests/check_logs/: CMakeLists.txt  check_test_log.gawk  echo_3.cmake  post_check.py  venv.bat  venv.sh
tests/check_logs/expected/: AppleClang.toml  Clang.toml  GNU.toml  Intel.toml  IntelLLVM.toml  MSVC.toml  NVHPC.toml  SunPro.toml  check_template.sh  template.toml
tests/check_logs/junit-logs/: Clang-cmp.xml  Clang-debug.xml  GNU-default.xml  GNU-verbose-cmp.xml  IntelLLVM-cmp.xml  IntelLLVM-default.xml  NVHPC-debug.xml  NVHPC-default.xml  SunPro-cmp.xml  SunPro-debug.xml  SunPro-default.xml
tests/comparisons/: CMakeLists.txt
tests/complex/: CMakeLists.txt
tests/docs/: CMakeLists.txt  c++26.cpp  check_examples.py  compare.en.ru.py  compiler_id.py  compiler_versions.py  countof_c.c  diff_countof.h  diff_countof_cxx.cpp  div0.c  expected_tables.py  git_tags.py  markdown_table.py  sizeof_evaluate.h  sizeof_evaluate_c.c  types_compatible_p.c  vla0.c  warning.h  zla.c  zla_cxx.cpp
tests/unit/: CMakeLists.txt  check_vla_alone_n0.h  check_vla_struct_n0.h  check_vla_zla_n0.h  chk_countof_ns_default_bltn.h  chk_countof_ns_default_c11.h  chk_countof_ns_default_gen.h  chk_countof_ns_default_tmpl.h  cntfn_dflt_bltn.h  cntfn_dflt_c11.h  cntfn_dflt_gen.h  cntfn_dflt_kr.h  cntfn_dflt_tmpl.h  cntfn_expected.cmake  cntfn_neg_c_pct.h  cntfn_neg_cv_pct.h  cntfn_neg_pct.h  cntfn_neg_size_bltn.h  cntfn_neg_size_pct.h  cntfn_neg_v_pct.h  cntfn_pos_cv_pct.h  cntfn_pos_pct.h  countof_ns_expected.cmake  exec_if_exists.cmake  falsechk_fpe.h  falsechk_rfpe_vla.h  neg__selftest.h  neg_alone_ptr.h  neg_cv_ptr.h  neg_func.h  neg_other.h  neg_ptr.h  neg_vla_func.h  neg_vla_ptr.h  neg_vla_zla_ptr.h  neg_zla_ptr.h  neg_zla_vla_ptr.h  pos__selftest.h  pos_alone_n0.h  pos_array.h  (+33 more)
tests/unit/comparisons/: ALX_COUNTOF_expected.cmake  JZMG_ARRAY_LEN_expected.cmake  LNX_ARRAY_SIZE_expected.cmake  N3369_NITEMS_expected.cmake  ms_countof_expected.cmake  std_size_expected.cmake  stdc_countof_expected.cmake
tests/unit/redundant/: falsechk_rfpe_fix.h  falsechk_segv.h  neg_other_2.h  neg_other_3.h  neg_ptr_4_short_example_72.h  neg_ptr_short_example_74.h  pos_array_2.h  pos_array_3.h  pos_array_4.h  pos_vla_2.h  pos_vla_3.h  pos_vla_4.h  pos_zla_00_3.h  pos_zla_0n_2.h  pos_zla_0n_3.h  pos_zla_n0_3.h
